2017-10-29  Karl Berry  <karl@freefriends.org>

	* elt-dirs.c (do_subdir): assert must include elt_length>0
	to guarantee the assert of elt[elt_length-1] is valid.
        From Doug McKenna, personal mail, 29oct17.

2017-10-25  Karl Berry  <karl@tug.org>

	* expand.c (brace_expand): do not look past the terminating
	null with bad input like "a{\0whatever".
	From Doug McKenna, personal mail, 23oct17.

2017-09-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tex-file.c: Use a standard API function GetLongPathName()
	instead of the custom kpathsea_getlongpath() (W32 only).

2017-09-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tex-file.c: Fix to return actual file names (W32 only).

2017-09-19  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* db.c: Fix for DOSISH systems in which _WIN32 is not defined.

2017-05-03  Karl Berry  <karl@tug.org>

	* texmf.cnf (TEXMFAUXTREES): new variable (default value empty
	string via empty braces), for tlmgr conf auxtrees.
	(TEXMF): include $TEXMFAUXTREES, but don't assume it is nonempty.

2017-04-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c, mingw32.c: Update texlive_gs_init() (w32 only). 

2017-04-21  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c, mingw32.c: Update texlive_gs_init() (w32 only). 

2017-04-14  Karl Berry  <karl@tug.org>

	* texmf.cnf (shell_escape_commands): add texosquery-jre8.

2017-04-13  Karl Berry  <karl@tug.org>

	* texmf.cnf (TEXMF, TEXMFDBS): move TEXMFLOCAL to before TEXMFSYS*,
	so, e.g., config.ps in TEXMFLOCAL overrides TEXMFSYSCONFIG.
	Report from Michael Shell:
	http://tug.org/pipermail/tex-live/2016-July/039062.html

2017-04-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmf.cnf: mendex requires the variable INDEXDICTIONARY.

2017-03-27  Karl Berry  <karl@freefriends.org>

	* Makefile.am (AM_TESTS_ENVIRONMENT): use instead of TESTS_ENVIRONMENT.

2017-03-18  Karl Berry  <karl@tug.org>

	* version.ac,
	* NEWS,
	* kpsewhich.c,
	* texmf.cnf,
	* doc/kpathsea.texi: version 6.2.3 for TL17.